--- a/SAE202_etu/SAE202_etu/nbproject/private/private.properties
+++ b/SAE202_etu/SAE202_etu/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\jeanf\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=/Users/maelgalland/Library/Application Support/NetBeans/13/build.properties
